# BHDSP_TJSigAmpSim

./: .gitignore  CMakeLists.txt  MEMORY.md  PRODUCT_SPEC.md  README.md
Fonts/bhore-punk-trial/: MUST READ.txt
Fonts/rockers-bulshit/: Read This.txt
assets/: bhp_logo.icns
dsp/: AmpEngine.cpp  AmpEngine.h  CabSimulator.cpp  CabSimulator.h  NoiseGate.cpp  NoiseGate.h  ReverbIRProcessor.cpp  ReverbIRProcessor.h  TunerStub.h  WhammyEffect.cpp  WhammyEffect.h
src/: BackhouseLookAndFeel.cpp  BackhouseLookAndFeel.h  CabMicDiagram.cpp  CabMicDiagram.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
